# digit-recognizer

./: README.md  pyproject.toml
notebooks/: training.ipynb
src/: train.py
