[tool.poetry]
name = "digit-recognizer"
version = "0.1.0"
description = ""
authors = ["woo <hanwj100@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastai = "^2.7.18"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
